--- a/MM1/MM1.vcxproj
+++ b/MM1/MM1.vcxproj
@@ -184,7 +184,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CField.h" />
+    <ClInclude Include="CFloatRect.h" />
     <ClInclude Include="CMaze.h" />
+    <ClInclude Include="CMazeWall.h" />
     <ClInclude Include="CScreen.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MM1.h" />
@@ -195,7 +197,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CField.cpp" />
+    <ClCompile Include="CFloatRect.cpp" />
     <ClCompile Include="CMaze.cpp" />
+    <ClCompile Include="CMazeWall.cpp" />
     <ClCompile Include="CScreen.cpp" />
     <ClCompile Include="MM1.cpp" />
     <ClCompile Include="MM1Dlg.cpp" />
