迷路が反転していたので修正

--- a/MM1/MM1.vcxproj.filters
+++ b/MM1/MM1.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="AdachiHo.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="setting.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MM1.cpp">
